--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.3.0",
     "antd": "^4.16.13",
+    "axios": "^0.22.0",
+    "firebase": "^9.1.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
